--- a/components/Countdown.module.css
+++ b/components/Countdown.module.css
@@ -24,7 +24,7 @@
     font-weight: 900;
     font-family: var(--font-heading);
     line-height: 1;
-    color: var(--madrid-black);
+    color: #FFFFFF;
 }
 
 .label {
@@ -32,14 +32,14 @@
     text-transform: uppercase;
     font-weight: 700;
     letter-spacing: 2px;
-    color: var(--madrid-red);
+    color: var(--madrid-sky-blue);
     margin-top: 0.5rem;
 }
 
 .separator {
     font-size: 2.5rem;
     font-weight: 900;
-    color: var(--madrid-gold);
+    color: var(--madrid-city-blue);
     padding-bottom: 2rem;
 }
 
