--- a/app/page.module.css
+++ b/app/page.module.css
@@ -44,9 +44,13 @@
   object-fit: contain;
 }
 
-.countdownWrapper {
-  margin-top: 1rem;
-  margin-bottom: -1rem;
+.topWidgets {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 0rem;
+  align-items: center;
 }
 
 .logoWrapper {
